BugFix: Datetimepicker is stuck on the UI (#8092)
Datetimepicker was visible on page load on Graph view, Log View, Tree
View, and Gantt chart, this was due to a fight between the old version
shipped with FAB and the version we now use.

--- a/airflow/www/static/css/main.css
+++ b/airflow/www/static/css/main.css
@@ -248,6 +248,11 @@ label[for="timezone-other"], #timezone-other {
     overflow-x: hidden;
 }
 
+/* depending on the version of FAB in use, we may have a style conflict */
+.bootstrap-datetimepicker-widget .datepicker>div {
+  display: block;
+}
+
 .hll { background-color: #ffffcc }
 .c { color: #408080; font-style: italic } /* Comment */
 .err { border: 1px solid #FF0000 } /* Error */
